--- a/components/TabBar/TabBar.scss
+++ b/components/TabBar/TabBar.scss
@@ -3,14 +3,17 @@
 		left: 0;
 		bottom: 0;
 		width: 100%;
+		z-index: 9999;
 		// height: 100rpx;
+		background-color: white;
+		padding-bottom: 30px;
+		height: 88px;
 	}
 	.tab-list{
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		width: 100%;
-		height: 100rpx;
 		background-color: #FFFFFF;
 		.list{
 			display: flex;
@@ -18,18 +21,23 @@
 			align-items: center;
 			justify-content: center;
 			width: 20%;
-			height: 100rpx;
+			padding: 5px 0 0;
+			font-size: 0;
+			color: #999;
 			image{
-				width: 48rpx;
-				height: 48rpx;
+				width: 50rpx;
+				height: 50rpx;
 			}
 			text{
-				color: #888;
-				font-size: 24rpx;
+				    color: black;
+				    font-size: 14px;
+					text-align: center;
+					margin-top: 4px;
+					line-height: 1.8;
 				//margin-top: 10rpx;
 			}
 			.action{
-				color: $base;
+				color: rgb(204, 118, 41);
 			}
 		}
 	}
