--- a/pages/my/my.scss
+++ b/pages/my/my.scss
@@ -5,6 +5,332 @@
 	padding-bottom: 100rpx;
 	//background-color: #f6f6f6;
 }
+.crYbem {
+    width: 100vw;
+    min-height: calc(var(--vh,1vh) * 100);
+    box-sizing: border-box;
+    padding-bottom: 100px;
+    position: relative;
+    background-color: rgb(248, 251, 254);
+}
+.gDdAqR {
+    display: block;
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    right: 20px;
+    top: 50%;
+    margin-top: -12px;
+    background-image: url("http://sep-03.cc/wap-fe-static/yangfan/mine/message.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    cursor: pointer;
+	background-color: transparent;
+}
+.bg-container-banner-bg{
+	position: absolute;
+	    z-index: 1;
+	    width: 100%;
+	    height: 100%;
+	    top: 0px;
+	    left: 0px;
+}
+.cahtIg{
+	    display: flex;
+	    flex-direction: row;
+	    -webkit-box-pack: center;
+	    justify-content: center;
+	    -webkit-box-align: center;
+	    align-items: center;
+	    font-family: "PingFang SC";
+	    font-style: normal;
+	    font-weight: 500;
+	    font-size: 18px;
+	    line-height: 25px;
+	    padding: 12px 0px;
+	    color: rgb(18, 18, 18);
+	    position: relative;
+	    z-index: 2;
+}
+.bg-container-content {
+    position: relative;
+    z-index: 2;
+}
+.fjxMiP {
+    height: 96px;
+    display: flex;
+    flex-direction: column;
+}
+.iaaSFu {
+    padding: 16px 16px 0px;
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+}
+.eREmZu {
+    width: 60px;
+    height: 60px;
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center center;
+	background-image: url('/static/default-avatar.png');
+}
+.eoRrom {
+    padding-left: 16px;
+    flex-shrink: 1;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 21px;
+    color: rgb(18, 18, 18);
+}
+.dicxJg {
+    display: flex;
+    flex-direction: row;
+    height: 55px;
+}
+.aGiEE {
+    flex: 1 1 0%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    align-items: center;
+}
+.fHanUi {
+    font-family: D-DIN;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    color: rgb(41, 30, 3);
+}
+.eTjCoM {
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 17px;
+    color: rgb(141, 99, 15);
+}
+.aGiEE::after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 0px;
+    height: 32px;
+    right: 0px;
+    top: 50%;
+    margin-top: -14px;
+    border-right: 1px solid rgb(234, 209, 145);
+}
+
+html:not([data-scale]) .am-card:not(.am-card-full) {
+    position: relative;
+    border: none;
+}
+.page-v2-mine .page-module-card {
+    margin: 16px 12px 0;
+    min-height: unset;
+    padding-bottom: 0;
+}
+.page-v2-mine .page-module-card:before {
+    display: none;
+}
+.page-v2-mine .page-module-card {
+    margin: 16px 12px 0;
+    min-height: unset;
+    padding-bottom: 0;
+}
+.am-card:not(.am-card-full) {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
+.am-card {
+    min-height: 96px;
+    padding-bottom: 6px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+}
+.iTMaeS {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 24px;
+}
+.iTMaeS:last-child {
+    margin-bottom: 0px;
+}
+.jkskzy {
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+}
+.jkskzy .account-title {
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 17px;
+    color: rgb(79, 79, 79);
+    margin-bottom: 16px;
+    text-align: center;
+}
+.jkskzy .account-num {
+    font-family: D-DIN;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+    color: rgb(41, 30, 3);
+    text-align: center;
+}
+.evosKq.primary {
+    border: none;
+    background-color: rgb(179, 141, 74);
+    color: white;
+    font-weight: 900;
+}
+.evosKq {
+	background-color: transparent;
+    flex: 1 1 0%;
+    margin-right: 10px;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    border: 1px solid rgb(189, 189, 189);
+    border-radius: 4px;
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgb(130, 130, 130);
+    height: 44px;
+}
+.evosKq:last-child {
+    margin-right: 0px;
+}
+a {
+    background: transparent;
+    text-decoration: none;
+}
+.kYkBnh {
+    display: flex;
+    flex-direction: row;
+}
+.fhbwkm {
+    flex: 1 1 0%;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgb(51, 51, 51);
+}
+.fhbwkm .list-icon {
+    width: 50px;
+    height: 50px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    margin-bottom: 16px;
+}
+.jIbFUK {
+    margin-top: 16px;
+    height: 36px;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(255, 251, 239);
+    border-radius: 4px;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 0px 12px;
+}
+.jIbFUK .text-left, .jIbFUK .text-bold {
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: rgb(179, 141, 74);
+}
+.jIbFUK .text-left {
+    flex-shrink: 1;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+}
+.jIbFUK .text-right {
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    color: rgb(79, 79, 79);
+    padding-right: 4px;
+}
+.jIbFUK .arrow-icon {
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    width: 16px;
+    height: 16px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+.dudAkF {
+    display: flex;
+    flex-direction: row;
+    padding: 16px 0px;
+    -webkit-box-align: center;
+    align-items: center;
+    border-bottom: 1px solid rgb(237, 240, 241);
+    transition: background-color 0.3s ease 0s;
+}
+.dudAkF .icon {
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 28px;
+    height: 28px;
+}
+
+.dudAkF .title {
+    flex-shrink: 1;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    padding: 0px 16px;
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgb(8, 26, 42);
+}
+
 .my-top{
 	position: relative;
 	width: 100%;
