--- a/pages/Message/Message.scss
+++ b/pages/Message/Message.scss
@@ -6,7 +6,170 @@
 	height: 100%;
 	background-color: #f6f6f6;
 }
+html:not([data-scale]) .am-list-body {
+    border-bottom: none;
+}
+.am-list-body {
+    position: relative;
+    background-color: #fff;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+html:not([data-scale]) .am-list-body:before {
+    -webkit-transform: scaleY(.33);
+    -ms-transform: scaleY(.33);
+    transform: scaleY(.33);
+}
+html:not([data-scale]) .am-list-body:before {
+    content: "";
+    position: absolute;
+    background-color: #ddd;
+    display: block;
+    z-index: 1;
+    top: 0;
+    right: auto;
+    bottom: auto;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    -webkit-transform-origin: 50% 50%;
+    -ms-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-transform: scaleY(.5);
+    -ms-transform: scaleY(.5);
+    transform: scaleY(.5);
+}
+.am-list-item {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 15px;
+    min-height: 44px;
+    background-color: #fff;
+    vertical-align: middle;
+    overflow: hidden;
+    -webkit-transition: background-color .2s;
+    -o-transition: background-color .2s;
+    transition: background-color .2s;
+    -ms-flex-align: center;
+    align-items: center;
+}
+.am-list-item .am-list-thumb:first-child {
+    margin-right: 15px;
+}
+.am-list-item img {
+    width: 22px;
+    height: 22px;
+    vertical-align: middle;
+}
 
+html:not([data-scale]) .am-list-item:not(:last-child) .am-list-line {
+    border-bottom: none;
+}
+
+.am-list-item:not(:last-child) .am-list-line {
+    border-bottom: 1px solid #ddd;
+}
+.am-list-item .am-list-line-multiple {
+    padding: 12.5px 15px 12.5px 0;
+}
+.am-list-item .am-list-line {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex: 1;
+    flex: 1 1;
+    -ms-flex-item-align: stretch;
+    align-self: stretch;
+    padding-right: 15px;
+    overflow: hidden;
+}
+.am-list-item {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 15px;
+    min-height: 44px;
+    background-color: #fff;
+    vertical-align: middle;
+    overflow: hidden;
+    -webkit-transition: background-color .2s;
+    -o-transition: background-color .2s;
+    transition: background-color .2s;
+    -ms-flex-align: center;
+    align-items: center;
+}
+.am-list-item .am-list-line .am-list-brief {
+    color: #888;
+    font-size: 15px;
+    line-height: 1.5;
+    margin-top: 6px;
+}
+.am-list-item .am-list-line .am-list-brief, .am-list-item .am-list-line .am-list-title {
+    width: auto;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.am-list-item .am-input-control input, .am-list-item .am-input-label, .am-list-item .am-list-line .am-list-content {
+    font-size: 16px!important;
+}
+.am-list-item .am-list-line-multiple .am-list-content, .am-list-item .am-list-line-multiple .am-list-extra {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+.am-list-item .am-list-line .am-list-content, .am-list-item .am-list-line .am-list-extra {
+    line-height: 1.5;
+    width: auto;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-top: 7px;
+    padding-bottom: 7px;
+}
+.am-list-item .am-list-line .am-list-content {
+    -ms-flex: 1;
+    flex: 1 1;
+    color: #000;
+    font-size: 17px;
+    text-align: left;
+}
+.am-list-item .am-list-line .am-list-extra {
+    -ms-flex-preferred-size: 36%;
+    flex-basis: 36%;
+    color: #888;
+    font-size: 16px;
+    text-align: right;
+}
+.hhqWiV .am-list-extra {
+    flex-basis: 55% !important;
+}
+html:not([data-scale]) .am-list-body div:not(:last-child) .am-list-line:after {
+    content: "";
+    position: absolute;
+    background-color: #ddd;
+    display: block;
+    z-index: 1;
+    top: auto;
+    right: auto;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    -webkit-transform-origin: 50% 100%;
+    -ms-transform-origin: 50% 100%;
+    transform-origin: 50% 100%;
+    -webkit-transform: scaleY(.5);
+    -ms-transform: scaleY(.5);
+    transform: scaleY(.5);
+}
+html:not([data-scale]) .am-list-body div:not(:last-child) .am-list-line:after {
+    -webkit-transform: scaleY(.33);
+    -ms-transform: scaleY(.33);
+    transform: scaleY(.33);
+}
 .message-list{
 	padding: 0 4%;
 	background-color: #FFFFFF;
