--- a/pages/MarketDetails/MarketDetails.scss
+++ b/pages/MarketDetails/MarketDetails.scss
@@ -18,7 +18,8 @@
 	width: 100%;
 	//height: 100rpx;
 	//background:rgba(255,255,255,0);
-	background-color: #DE4A29;
+	background-color: #f4e4b7;
+	color:black !important;
 	/* #ifdef APP-PLUS||H5 */
 	height: calc(88rpx + var(--status-bar-height));
 	//padding-top: var(--status-bar-height);
@@ -35,6 +36,7 @@
 		justify-content: center;
 		width: 88rpx;
 		height: 100%;
+		color:black;
 		/* #ifdef APP-PLUS */
 		padding-top: 50rpx;
 		/* #endif */
@@ -78,6 +80,7 @@
 		/* #ifdef MP */
 		padding-top: 100rpx;
 		/* #endif */
+		color:#000 !important;
 		.tab{
 			position: relative;
 			margin: 0 auto;
@@ -94,7 +97,7 @@
 				
 			}
 			text{
-				color: #FFF;
+				color: #000;
 				font-size: 26rpx;
 			}
 		}
@@ -113,7 +116,9 @@
 			}
 		}
 	}
-	.back{color: #FFF;}
+	.uniui-search{
+		color:#000 !important;
+	}
 	// 分享更多
 	.share-more{
 		position: absolute;
