--- a/pages/search/search.scss
+++ b/pages/search/search.scss
@@ -71,7 +71,6 @@
 /* 搜索记录 */
 .search-record{
 	padding: 0 4%;
-	margin-top: 100rpx;
 	/* #ifdef APP-PLUS */
 	margin-top: 200rpx;
 	/* #endif */
@@ -86,9 +85,9 @@
 		justify-content: space-between;
 		width: 100%;
 		height: 80rpx;
+		color:rgb(142, 142, 147);
 		.title{
 			font-size: 28rpx;
-			color: #333333;
 		}
 		.iconfont{
 			font-size: 38rpx;
@@ -99,7 +98,6 @@
 		flex-wrap: wrap;
 		width: 100%;
 		.list{
-			background-color: #f6f6f6;
 			border-radius: 5px;
 			width: 31%;
 			text-align: center;
@@ -116,7 +114,6 @@
 }
 .search-found{
 	padding: 0 4%;
-	margin-top: 20rpx;
 	background-color: #FFFFFF;
 	.search-title{
 		display: flex;
@@ -124,9 +121,9 @@
 		justify-content: space-between;
 		width: 100%;
 		height: 80rpx;
+		color:rgb(142, 142, 147);
 		.title{
 			font-size: 28rpx;
-			color: #333333;
 		}
 		.iconfont{
 			font-size: 38rpx;
