--- a/pages/Account/Account.scss
+++ b/pages/Account/Account.scss
@@ -3,16 +3,17 @@
 	width: 100%;
 	// height: 100%;
 	padding-bottom: 100rpx;
-	//background-color: #f6f6f6;
+	background-color: rgb(248, 251, 254);;
 }
 .my-top{
 	position: relative;
 	width: 100%;
+	background: url('/static/new//banner-bg.png') center top / cover, linear-gradient(rgb(252, 237, 195) 0%, rgb(243, 214, 157) 73.96%, rgb(247, 251, 254) 100%);
 	//height: 520rpx;
 	/* #ifdef APP-PLUS||H5*/
-	height: calc(480rpx + var(--status-bar-height));
+	height: calc(650rpx + var(--status-bar-height));
 	/* #endif */
-	background: #DE4A29;
+	// background: #f4e4b7;
 	//border-radius: 0 0 50% 50% / 0% 0% 15% 15%;
 	overflow: hidden;
 	.head{
@@ -256,7 +257,6 @@
 	.vip-info{
 		position: absolute;
 		left: 50%;
-		bottom: 0;
 		justify-content: space-between;
 		padding: 0 4%;
 		width: 96%;
@@ -325,12 +325,15 @@
 }
 /* 订单信息 */
 .order-info{
+	position: relative;
+	top: -60px;
 	display: flex;
 	width: 94%;
-	height: 200rpx;
+	flex-wrap: wrap;
 	border-radius: 20rpx;
 	background-color: #FFFFFF;
 	margin: 20rpx auto;
+	padding: 20px 20px 22px;
 	.list{
 		display: flex;
 		flex-direction: column;
@@ -456,6 +459,8 @@
 /* 我的服务 */
 .my-service{
 	width: 94%;
+	position: relative;
+	top: -60px;
 	background-color: #FFFFFF;
 	border-radius: 20rpx;
 	margin: 20rpx auto;
