--- a/pages/realName/realName.scss
+++ b/pages/realName/realName.scss
@@ -72,7 +72,7 @@
 			height: 32rpx;
 			line-height: 32rpx;
 			color: #959595;
-			font-size: 28rpx;
+			font-size: 16px;
 			overflow: hidden;
 		}
 		.iconfont{
@@ -83,7 +83,7 @@
 		input{
 			margin-left: 20rpx;
 			color: #222222;
-			font-size: 28rpx;
+			font-size: 17px;
 			width: 70%;
 		}
 		.icon{
