--- a/pages/AccountInfo/AccountInfo.scss
+++ b/pages/AccountInfo/AccountInfo.scss
@@ -6,7 +6,9 @@
 	height: 100%;
 	background-color: #f6f6f6;
 }
-
+.tx .uni-list-item__container{
+	flex-direction: row-reverse;
+}
 /* 用户信息 */
 .user-info{
 	width: 100%;
@@ -77,7 +79,9 @@
 		}
 	}
 }
-
+.tx .uni-list-item__container{
+	flex-direction: row-reverse;
+}
 /* 设置列表 */
 .setting-list{
 	padding: 0 4%;
