--- a/pages/AfterSalesOrder/AfterSalesOrder.scss
+++ b/pages/AfterSalesOrder/AfterSalesOrder.scss
@@ -67,8 +67,9 @@
 			align-items: center;
 			justify-content: space-between;
 			width: 100%;
-			height: 60rpx;
-			border-bottom: 1px #c8c4c4 dashed;
+			height: 36px;
+			border-bottom: 1px solid rgb(232, 232, 232);
+			padding: 5px 10px;
 			.number{
 				display: flex;
 				align-items: center;
@@ -92,19 +93,20 @@
 					color: $base;
 				}
 				image{
-					width: 34rpx;
-					height: 34rpx;
+					width: 16px;
+					height: 16px;
 				}
 				text{
 					font-size: 26rpx;
-					font-weight: bold;
 					color: #222222;
-					margin-left: 10rpx;
+					margin-left: 14rpx;
 				}
 			}
 		}
 		.goods-list{
 			width: 100%;
+			padding: 9px 0;
+			border-bottom: 1px solid rgb(232, 232, 232);
 			//height: 200rpx;
 			.list{
 				display: flex;
@@ -129,7 +131,7 @@
 					align-items: center;
 					width: 25%;
 					height: 100%;
-					font-size: 28rpx;
+					font-size: 30rpx;
 					color: #888888;
 					text{
 						display: inline-block;
@@ -150,12 +152,12 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
-			height: 60rpx;
+			height: 36px;
 			//background-color: #f6f6f6;
 			//border-radius: 20rpx;
 			
 			text{
-				font-size: 24rpx;
+				font-size: 26rpx;
 				color: #959595;
 			}
 			text:nth-child(1){
@@ -191,7 +193,11 @@
 		}
 	}
 }
-
+.am-list-footer {
+    padding: 9px 15px 15px;
+    font-size: 14px;
+    color: #888;
+}
 /* 筛选弹窗 */
 .filtrate-win{
 	.cu-dialog{
@@ -208,7 +214,7 @@
 				width: 100%;
 				height: 100rpx;
 				text{
-					font-size: 28rpx;
+					font-size: 30rpx;
 					color: #222222;
 				}
 			}
@@ -258,7 +264,7 @@
 				width: 50%;
 				height: 100%;
 				text{
-					font-size: 28rpx;
+					font-size: 30rpx;
 					color: #555555;
 				}
 			}
