--- a/pages/ChangePassword/ChangePassword.scss
+++ b/pages/ChangePassword/ChangePassword.scss
@@ -37,7 +37,7 @@
 		}
 		text{
 			font-size: 28rpx;
-			color: #222222;
+			color: #000;
 		}
 	}
 	.btn{
@@ -72,8 +72,8 @@
 			width: 25%;
 			height: 32rpx;
 			line-height: 32rpx;
-			color: #959595;
-			font-size: 28rpx;
+			color: #000;
+			font-size: 16px;
 			overflow: hidden;
 		}
 		.iconfont{
@@ -84,14 +84,33 @@
 		input{
 			margin-left: 20rpx;
 			color: #222222;
-			font-size: 28rpx;
+			font-size: 16px;
 			width: 70%;
+			text-align: right;
 		}
 		.icon{
 			margin-left: 20rpx;
 		}
 	}
 	
+}
+uni-button {
+    background-color: rgb(179, 141, 74);
+    background-image: linear-gradient(112deg, rgb(220, 190, 127) 0%, rgb(179, 141, 74) 100%);
+    border-radius: 4px;
+    font-family: PingFangSC-Semibold;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    border: none;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    padding-left: 8px;
+    padding-right: 8px;
+    height: 44px;
 }
 .mt_50{
 	margin-top: 100rpx;
