--- a/pages/MoneyLog/MoneyLog.scss
+++ b/pages/MoneyLog/MoneyLog.scss
@@ -6,7 +6,17 @@
 	//height: 100%;
 	background-color: #fff;
 }
-
+.bWvahM {
+    display: flex;
+    background-color: rgb(244, 245, 247);
+    line-height: 35px;
+    text-align: center;
+	font-size: 12px;
+}
+.bWvahM div {
+    flex: 1 1 0%;
+    color: rgb(142, 142, 147);
+}
 /* 订单tab */
 .order-tab{
 	position: fixed;
@@ -29,7 +39,7 @@
 		width: 205%;
 		height: 80%;
 		text{
-			font-size: 26rpx;
+			font-size: 14px;
 			color: #959595;
 		}
 	}
@@ -55,7 +65,6 @@
 	margin-top: 60px;
 	.title{
 		width: 100%;
-		padding: 5px 0;
 		//align-items: center;
 		//justify-content: space-between;
 		text{
@@ -69,11 +78,11 @@
 		padding: 0 4%;
 		background-color: #FFFFFF;
 		border-radius: 20rpx;
-		margin-bottom: 20rpx;
 		overflow-y: hidden;
 		overflow-x: auto;
-		box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px;
+		border-bottom: 1px solid rgb(232, 232, 232);
 		border-radius: 5px;
+		font-size: 12px;text-align: center;
 		.order-number{
 			display: flex;
 			align-items: center;
@@ -90,10 +99,10 @@
 					border-radius: 10rpx;
 					background-color: #F43F3B;
 					color: #FFFFFF;
-					font-size: 22rpx;
+					font-size: 12px;
 				}
 				text{
-					font-size: 26rpx;
+					font-size: 12px;
 					color: #959595;
 				}
 			}
@@ -108,7 +117,7 @@
 					height: 34rpx;
 				}
 				text{
-					font-size: 26rpx;
+					font-size: 12px;
 					font-weight: bold;
 					color: #222222;
 					margin-left: 10rpx;
@@ -124,6 +133,9 @@
 				justify-content: space-between;
 				padding: 5px 0;
 				height: 80rpx;
+				div{
+					flex-basis: 25%;
+				}
 				.red{
 					color: $base !important;
 				}
@@ -137,8 +149,9 @@
 					//display: flex;
 					align-items: center;
 					width: 25%;
+					flex-basis: 25%;
 					height: 100%;
-					font-size: 28rpx;
+					font-size: 12px;
 					color: #888888;
 					text{
 						display: inline-block;
@@ -159,7 +172,7 @@
 			//border-radius: 20rpx;
 			
 			text{
-				font-size: 24rpx;
+				font-size: 12px;
 				color: #959595;
 			}
 			text:nth-child(1){
@@ -176,7 +189,7 @@
 			background-color: #FFFFFF;
 			text{
 				padding: 10rpx 30rpx;
-				font-size: 24rpx;
+				font-size: 12px;
 				color: #959595;
 				border: 2rpx solid #EEEEEE;
 				border-radius: 100rpx;
@@ -187,7 +200,7 @@
 			.action{
 				//border: 2rpx solid $base;
 				color: #989898;
-				font-size: 24rpx;
+				font-size: 12px;
 			}
 			.sm{
 				margin-left: 10rpx;
@@ -212,7 +225,7 @@
 				width: 100%;
 				height: 100rpx;
 				text{
-					font-size: 28rpx;
+					font-size: 12px;
 					color: #222222;
 				}
 			}
