--- a/pages/MyShare/MyShare.scss
+++ b/pages/MyShare/MyShare.scss
@@ -19,6 +19,551 @@
 		}
 	}
 }
+.claxwl {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: calc(var(--vh,1vh) * 100 - 88px);
+    overflow: auto;
+}
+.iQByVk {
+    flex-shrink: 0;
+    -webkit-box-flex: 0;
+    flex-grow: 0;
+    padding: 12px 0px;
+    position: relative;
+}
+.cddMpM {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background-image: url("/wap-fe-static/yangfan/sub-banner.png"), linear-gradient(rgb(252, 237, 195) 0%, rgb(243, 214, 157) 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center top;
+}
+.llyxYj {
+    position: relative;
+    z-index: 2;
+}
+.fgDPNR.showBack {
+    padding-left: 54px;
+    padding-right: 54px;
+}
+.fgDPNR {
+    font-family: PingFangSC-Medium;
+    font-size: 18px;
+    color: rgb(18, 18, 18);
+    text-align: center;
+    font-weight: 500;
+    position: relative;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.fgDPNR .sub-page-container-icon {
+    position: absolute;
+    top: 50%;
+    margin-top: -15px;
+    left: 16px;
+}
+svg:not(:root) {
+    overflow: hidden;
+}
+.am-icon-md {
+    width: 22px;
+    height: 22px;
+}
+.am-icon {
+    fill: currentColor;
+    background-size: cover;
+    width: 22px;
+    height: 22px;
+}
+.FlEzB {
+    padding: 20px 20px 0px;
+    overflow: hidden;
+    background-size: cover;
+}
+.FlEzB .header-wrap {
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    margin-bottom: 30px;
+}
+.FlEzB .data-info {
+    display: flex;
+    padding: 15px 20px;
+}
+.FlEzB .data-info .cell {
+    flex: 1 1 0%;
+    text-align: center;
+    padding: 0px 10px;
+}
+.FlEzB .data-info .cell .title {
+    font-size: 14px;
+}
+.FlEzB .data-info .cell .value {
+    font-size: 22px;
+    color: rgb(255, 69, 0);
+}
+.FlEzB .data-info .cell .value .unit {
+    font-size: 12px;
+	margin-left: 6px;
+}
+.hoqqAL {
+	width: 55%;
+    background-color: rgb(179, 141, 74);
+    background-image: linear-gradient(112deg, rgb(220, 190, 127) 0%, rgb(179, 141, 74) 100%);
+    border-radius: 4px;
+    font-family: PingFangSC-Semibold;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    border: none;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    padding-left: 8px;
+    padding-right: 8px;
+    height: 44px;
+}
+.hoqqAL.new-button, .hoqqAL.new-button-rounded {
+    border-radius: 22px;
+    padding-left: 22px;
+    padding-right: 22px;
+}
+.hoqqAL.new-button, .hoqqAL.new-button-center {
+    margin: 0px auto;
+}
+.hoqqAL.new-button, .hoqqAL.new-button-middle {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+.FlEzB p {
+    text-align: center;
+    color: rgb(255, 69, 0);
+    line-height: 40px;
+    padding-bottom: 10px;
+}
+.czWUmi::after {
+    content: " ";
+    display: block;
+    width: 100%;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    height: 1px;
+    transform: scaleY(0.5);
+    background-color: rgb(232, 232, 232);
+}
+.am-whitespace.am-whitespace-md {
+    height: 9px;
+}
+.am-list-footer {
+    padding: 9px 15px 15px;
+    font-size: 14px;
+    color: #888;
+}
+
+.jzbdaB .title {
+    text-align: center;
+    color: rgb(37, 37, 37);
+}
+.am-modal-mask {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+    z-index: 999;
+    background-color: rgba(0,0,0,.4);
+}
+.am-modal-wrap {
+    position: fixed;
+    overflow: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    z-index: 999;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transform: translateZ(1px);
+    transform: translateZ(1px);
+}
+.am-modal-transparent {
+    width: 270px;
+}
+.am-modal-transparent .am-modal-content {
+    border-radius: 7px;
+    padding-top: 15px;
+}
+.am-modal-content {
+    position: relative;
+    background-color: #fff;
+    border: 0;
+    background-clip: padding-box;
+    text-align: center;
+    height: 100%;
+    overflow: hidden;
+}
+.am-modal-transparent .am-modal-content .am-modal-body {
+    padding: 0 15px 15px;
+}
+.am-modal-body {
+    font-size: 15px;
+    color: #888;
+    height: 100%;
+    line-height: 1.5;
+    overflow: auto;
+}
+.kqQGAr {
+    display: flex;
+    border-radius: 6px;
+    margin: 10px 0px;
+}
+.kqQGAr div {
+    flex: 1 1 0%;
+}
+img {
+    border-style: none;
+	width: unset;
+}
+.kqQGAr input {
+    width: 100%;
+    line-height: 35px;
+	height: 35px;
+    padding: 0px 10px;
+    border-radius: 6px 0px 0px 6px;
+    border-top: 1px solid rgb(204, 204, 204);
+    border-bottom: 1px solid rgb(204, 204, 204);
+    border-left: 1px solid rgb(204, 204, 204);
+    border-image: initial;
+    border-right: none;
+}
+.kqQGAr button {
+    flex: 0 0 60px;
+    height: 37px;
+    text-align: center;
+    line-height: 37px;
+    background-color: rgb(255, 69, 0);
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 0px 6px 6px 0px;
+	font-size: 15px;
+}
+/* 订单tab */
+.order-tab{
+	left: 0;
+	top: 0;
+	/* #ifdef H5 */
+	top: 88rpx;
+	/* #endif */
+	z-index: 10;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	height: 100rpx;
+	background-color: #FFFFFF;
+	.tab{
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 205%;
+		height: 80%;
+		border-bottom: 2px solid #ddd;
+		text{
+			font-size: 14px;
+			color: #959595;
+		}
+	}
+	.action{
+		border-color: rgb(255, 69, 0);
+		color: rgb(255, 69, 0);
+		text{
+			color: #222222;
+		}
+		
+	}
+}
+/* 订单列表 */
+.order-list{
+	width: 100%;
+	margin-top: 0;
+	min-height: 9px;
+	.order-li{
+		padding: 20rpx 4%;
+		background-color: #FFFFFF;
+		border-radius: 20rpx;
+		margin-bottom: 20rpx;
+		.order-number{
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			width: 100%;
+			height: 60rpx;
+			border-bottom: 1px #c8c4c4 dashed;
+			.number{
+				display: flex;
+				align-items: center;
+				.icon{
+					margin-left: 20rpx;
+					border: 1px solid #F43F3B;
+					border-radius: 10rpx;
+					background-color: #F43F3B;
+					color: #FFFFFF;
+					font-size: 22rpx;
+				}
+				text{
+					font-size: 26rpx;
+					color: #959595;
+				}
+			}
+			.type{
+				display: flex;
+				align-items: center;
+				.red{
+					color: $base;
+				}
+				image{
+					width: 34rpx;
+					height: 34rpx;
+				}
+				text{
+					font-size: 26rpx;
+					font-weight: bold;
+					color: #222222;
+					margin-left: 10rpx;
+				}
+			}
+		}
+		.goods-list{
+			width: 100%;
+			//height: 200rpx;
+			.list{
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				padding: 5px 0;
+				height: 80rpx;
+				.green{
+					color: #007c00 !important;
+				}
+				.big{
+					color: #333333;
+				}
+				.info{
+					//display: flex;
+					align-items: center;
+					width: 25%;
+					height: 100%;
+					font-size: 28rpx;
+					color: #888888;
+					text{
+						display: inline-block;
+						text-align: center;
+						align-items: center;
+						justify-content: space-between;
+						width: 100%;
+					}
+				}
+			}
+		}
+		.order-status{
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			height: 60rpx;
+			//background-color: #f6f6f6;
+			//border-radius: 20rpx;
+			
+			text{
+				font-size: 24rpx;
+				color: #959595;
+			}
+			text:nth-child(1){
+				//color: #222222;
+				//margin-right: 20rpx;
+			}
+		}
+		.order-btn{
+			display: flex;
+			align-items: center;
+			justify-content: flex-end;
+			width: 100%;
+			height: 100rpx;
+			background-color: #FFFFFF;
+			text{
+				padding: 10rpx 30rpx;
+				font-size: 24rpx;
+				color: #959595;
+				border: 2rpx solid #EEEEEE;
+				border-radius: 100rpx;
+			}
+			
+		}
+		.switch-setting{
+			.action{
+				//border: 2rpx solid $base;
+				color: #989898;
+				font-size: 24rpx;
+			}
+			.sm{
+				margin-left: 10rpx;
+			}
+		}
+	}
+	.position{
+		background-color: #ffffff;
+		border-radius: 20rpx;
+		overflow: hidden;
+		background-color: rgb(243, 247, 255);
+		width: 100%;
+		//border-top: 1px solid #ddd;
+		border-bottom: 1px solid #ddd;
+		.title{
+			width: 100%;
+			padding: 5px 0;
+			//align-items: center;
+			//justify-content: space-between;
+			text{
+				width: 25%;
+				display: inline-block;
+				text-align: center;
+				color: #888888;
+			}
+		}
+		.list{
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			height: 50px;
+			padding: 5px 0;
+			border: 1px #ddd dashed;
+			.green{
+				color: #007c00 !important;
+			}
+			.big{
+				color: #333333;
+			}
+			.info{
+				//display: flex;
+				align-items: center;
+				width: 25%;
+				height: 100%;
+				font-size: 28rpx;
+				color: #888888;
+				text{
+					display: inline-block;
+					text-align: center;
+					align-items: center;
+					justify-content: space-between;
+					width: 100%;
+				}
+			}
+		}
+		.info_50{
+			width: 50% !important;
+		}
+		.size_11{
+			font-size: 22rpx !important;
+		}
+	}
+}
+
+/* 筛选弹窗 */
+.filtrate-win{
+	.cu-dialog{
+		top:0;
+		height:calc(100vh);
+		flex-basis: 90% !important;
+		background-color: #FFFFFF;
+		// 下单时间
+		.order-time{
+			padding: 0 4%;
+			.title{
+				display: flex;
+				align-items: center;
+				width: 100%;
+				height: 100rpx;
+				text{
+					font-size: 28rpx;
+					color: #222222;
+				}
+			}
+			.time-list{
+				display: flex;
+				flex-wrap: wrap;
+				justify-content: space-between;
+				width: 100%;
+				.list{
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					width: 48%;
+					height: 60rpx;
+					background-color: #f6f6f6;
+					border: 2rpx solid #FFFFFF;
+					border-radius: 60rpx;
+					margin-bottom: 20rpx;
+					text{
+						font-size: 26rpx;
+						color: #222222;
+					}
+				}
+				.action{
+					background-color: $rgba-02;
+					border: 2rpx solid $base;
+					text{
+						color: $base;
+					}
+				}
+			}
+		}
+		// 按钮
+		.footer-btn{
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			display: flex;
+			align-items: center;
+			width: 100%;
+			height: 100rpx;
+			border-top: 2rpx solid #f6f6f6;
+			.btn{
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 50%;
+				height: 100%;
+				text{
+					font-size: 28rpx;
+					color: #555555;
+				}
+			}
+			.action{
+				background: linear-gradient(to right,$base,$change-clor);
+				text{
+					color: #FFFFFF;
+				}
+			}
+		}
+	}
+}
 /* 顶部返回 */
 .head-back{
 	position: fixed;
@@ -30,7 +575,6 @@
 	justify-content: center;
 	width: 100%;
 	height: 82rpx;
-	background-color: #ff6029;
 	/* #ifdef APP-PLUS */
 	height: 82rpx;
 	//height: calc(100rpx + var(--status-bar-height));
@@ -41,6 +585,7 @@
 	padding-top: 20rpx;
 	/* #endif */
 	.back{
+		cursor: pointer;
 		position: absolute;
 		left: 0;
 		top: 0;
@@ -58,8 +603,8 @@
 		text{
 			width: 20rpx;
 			height: 20rpx;
-			border-left: 4rpx solid #ffffff;
-			border-bottom: 4rpx solid #ffffff;
+			border-left: 4rpx solid #000;
+			border-bottom: 4rpx solid #000;
 			transform: rotate(45deg);
 		}
 	}
