--- a/pages/PaymentEdit/PaymentEdit.scss
+++ b/pages/PaymentEdit/PaymentEdit.scss
@@ -4,52 +4,129 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #FFFFFF;
+	background-color: #f6f6f6;
 }
 
-.pay-title{
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.code-get{
 	width: 100%;
-	height: 200rpx;
-	text{
-		font-size: 28rpx;
-		color: #555555;
+	height: 400rpx;
+	background-color: #FFFFFF;
+	border-radius: 0 0 20rpx 20rpx;
+	.phone{
+		display: flex;
+		align-items: center;
+		padding: 0 4%;
+		height: 100rpx;
+		text{
+			font-size: 28rpx;
+			color: #222222;
+		}
 	}
-}
-
-.pay-password{
-	display: flex;
-	align-items: center;
-	width: 90%;
-	height: 80rpx;
-	margin: 20rpx auto;
-	border: 2rpx solid $base;
-	.list{
+	.code{
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0 4%;
+		height: 100rpx;
+		border-bottom: 2rpx solid #f6f6f6;
+		input{
+			width: 70%;
+			height: 100%;
+			color: #222222;
+			font-size: 28rpx;
+		}
+		text{
+			font-size: 28rpx;
+			color: #000;
+		}
+	}
+	.btn{
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		width: 16.666%;
-		height: 100%;
-		border-right: 2rpx solid #EEEEEE;
+		width: 90%;
+		height: 70rpx;
+		margin: 40rpx auto;
+		background: linear-gradient(to right,$base,$change-clor);
+		border-radius: 70rpx;
+		box-shadow: 0 10rpx 10rpx $base;
 		text{
-			font-size: 32rpx;
+			color: #FFFFFF;
+			font-size: 28rpx;
 		}
-	}
-	.list:nth-child(6){
-		border-right: none;
 	}
 }
 
-.hint{
-	display: flex;
-	align-items: center;
-	justify-content: center;
+.setting-password{
 	width: 100%;
-	height: 100rpx;
-	text{
-		font-size: 28rpx;
-		color: $base;
+	height: 300rpx;
+	background-color: #FFFFFF;
+	border-radius: 0 0 20rpx 20rpx;
+	.inpu-password{
+		display: flex;
+		align-items: center;
+		padding: 0 4%;
+		height: 100rpx;
+		border-bottom: 2rpx solid #f6f6f6;
+		.text{
+			width: 25%;
+			height: 32rpx;
+			line-height: 32rpx;
+			color: #000;
+			font-size: 16px;
+			overflow: hidden;
+		}
+		.iconfont{
+			width: 5%;
+			color: #959595;
+			font-size: 28rpx;
+		}
+		input{
+			margin-left: 20rpx;
+			color: #222222;
+			font-size: 16px;
+			width: 70%;
+			text-align: right;
+		}
+		.icon{
+			margin-left: 20rpx;
+		}
 	}
+	
 }
+uni-button {
+    background-color: rgb(179, 141, 74);
+    background-image: linear-gradient(112deg, rgb(220, 190, 127) 0%, rgb(179, 141, 74) 100%);
+    border-radius: 4px;
+    font-family: PingFangSC-Semibold;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+    border: none;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    padding-left: 8px;
+    padding-right: 8px;
+    height: 44px;
+}
+.mt_50{
+	margin-top: 100rpx;
+}
+.btn{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 90%;
+		height: 70rpx;
+		margin: 0rpx auto;
+		background: linear-gradient(to right,$base,$change-clor);
+		border-radius: 70rpx;
+		box-shadow: 0 10rpx 10rpx $base;
+		text{
+			color: #FFFFFF;
+			font-size: 28rpx;
+		}
+	}
