--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -6,9 +6,67 @@
 	// height: 100%;
 	// overflow-x: hidden;
 	// overflow-y: auto;
-	padding-bottom: 100rpx;
+	padding-bottom: 10rpx;
 	background-color: #FFFFFF;
 }
+.ibTQvE {
+    padding: 8px 12px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+}
+.eCnZoD {
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    margin-right: 12px;
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 24px;
+}
+.kLeAjC {
+    width: 309px;
+    margin: 12px auto 0px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    text-align: center;
+    color: rgb(49, 49, 49);
+}
+.header-search {
+    flex-shrink: 1;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    height: 30px;
+    padding: 5px 10px;
+    border-radius: 50rpx !important;
+    background-color: rgb(224, 215, 197);
+    display: flex;
+    flex-direction: row;
+    -webkit-box-align: center;
+    align-items: center;
+    font-family: "PingFang SC";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 17px;
+    color: rgb(158, 131, 84);
+    cursor: pointer;
+}
+.icon-search {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center center;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
+}
+
 .head-info{
 	position: fixed;
 	left: 0;
@@ -141,6 +199,7 @@
 			flex-wrap: wrap;
 			justify-content: space-between;
 			height: 270rpx;
+			padding: 14px 10px;
 		}
 		.list{
 			display: flex;
@@ -149,14 +208,13 @@
 			align-items: center;
 			width: 33%;
 			height: 130rpx;
-			margin-bottom: 20rpx;
+			margin-bottom: 10rpx;
 			image{
 				width: 75rpx;
-				height: 75rpx;
-				border-radius: 100%;
+				height: 32px;
 			}
 			text{
-				font-size: 26rpx;
+				font-size: 13px;
 				color: #363636;
 				margin-top: 10rpx;
 			}
