--- a/pages/ClassIfy/ClassIfy.scss
+++ b/pages/ClassIfy/ClassIfy.scss
@@ -249,10 +249,10 @@
 /* 商品列表 */
 .goods-data {
 	width: 100%;
-	margin-top: 200rpx;
-	/* #ifdef APP-PLUS */
-	margin-top: 250rpx;
-	/* #endif */
+	// margin-top: 200rpx;
+	// /* #ifdef APP-PLUS */
+	// margin-top: 250rpx;
+	// /* #endif */
 	.goods-list {
 		//padding: 0 25rpx;
 		//border-radius: 20rpx;
